k8s/catalog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: imu
spec:
  replicas: 1
  selector:
    matchLabels: { app: catalog }
  template:
    metadata:
      labels: { app: catalog }
    spec:
      containers:
        - name: catalog
          image: imu_begin-catalog:latest
          ports: [{ containerPort: 9000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: imu
spec:
  selector: { app: catalog }
  ports:
    - name: http
      port: 9000
      targetPort: 9000
