k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imu-ing
  namespace: imu
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port: { number: 8000 }
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: catalog
                port: { number: 9000 }
